--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <version>2.4.6</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.1.2</version>
+        </dependency>
     </dependencies>
 
 </project>
