--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,16 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>2.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.12</artifactId>
+            <version>2.4.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.4</version>
+        </dependency>
     </dependencies>
 
 </project>
